# repo-adaptive-agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
.codex/agents/: implementation_agent.toml  independent_reviewer.toml  repo_explorer.toml
src/repo_adaptive_agents/: __init__.py  catalog.py  cli.py  generator.py  models.py  profiler.py  providers.py  recommender.py  schemas.py
src/repo_adaptive_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/repo_adaptive_agents/multi_cli/: __init__.py  adapter_generator.py  adapters.py  deployment.py  generator.py  models.py  roles.py  scope.py  team.py  team_generator.py  validator.py
tests/: test_adapters.py  test_deployment.py  test_multi_cli.py  test_mvp.py  test_providers.py  test_team.py
tests/fixtures/backend-api/: README.md  pyproject.toml
tests/fixtures/cloudflare-worker/: package.json  wrangler.toml
tests/fixtures/frontend-next/: package-lock.json  package.json  playwright.config.ts
tests/fixtures/hybrid-worker-proxy/: package.json  wrangler.toml
tests/fixtures/maven-messaging-bridge/: JenkinsFile.yml  pom.xml
tests/fixtures/next-fullstack-ai/: README.md  package.json
tests/fixtures/pipeline-operational/: README.md  requirements.txt
tests/fixtures/prefect-data-ops/: prefect.yaml  pyproject.toml
tests/fixtures/python-library/: pyproject.toml
tests/fixtures/python-ml/: pyproject.toml
tests/fixtures/team-api-openapi/: openapi.yaml  pyproject.toml
tests/fixtures/team-cli-tool/: pyproject.toml
(+70 files in other folders)
