[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-adaptive-agents"
version = "0.5.0"
description = "Deterministic repository profiler and agentic infrastructure proposal generator"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
repo-adaptive-agents = "repo_adaptive_agents.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
norecursedirs = ["fixtures"]
